# server-assistant

./: Cargo.toml  README.md
.github/workflows/: build.yml  publish.yml  release.yml
src/: error.rs  health.rs  main.rs  notification.rs
