[package]
name = "server-assistant"
version = "0.3.4"
edition = "2021"

[dependencies]
hyper = { version = "=0.14.25", features = ["full"] }
hyper-tls = "0.5"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.70"
serde = { version = "1.0.205", features = ["derive"] }
clap = { version = "4.4.6", features = ["cargo", "derive"] }
thiserror = "1"
anyhow = "1.0.80"
once_cell = "1.18"
chrono = { version = "0.4", features = ["alloc"] }
regex = "1"
log = "0.4.22"
env_logger = "0.11.5"
toml = "^0.8"
system-info-lite = { version = "0.1.0", git = "https://github.com/apepkuss/system_info.git", branch = "main" }

[[bin]]
name = "gaias"
path = "src/main.rs"
