[package]
name = "server-assistant"
version = "0.4.3"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
chrono = { version = "0.4", features = ["alloc"] }
clap = { version = "4.4.6", features = ["cargo", "derive"] }
env_logger = "0.11.5"
log = "0.4.22"
once_cell = "1.18"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.70"
sha256 = "1.5.0"
system-info-lite = { version = "0.1.1", git = "https://github.com/apepkuss/system_info.git", branch = "main" }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "^0.8"

[[bin]]
name = "gaias"
path = "src/main.rs"
